# npu-gpu-cpu

./: .gitignore  .pr_agent.toml  AGENTS.md  Makefile  README.md
.github/workflows/: pr-agent.yml  qodo-merge.yml  reddit-check.yml
.reddit_sessions/: 1uitnkr.json
daemon/: npu-gpu-cpud.py
docs/: AGENTS.md  INT8-HANDOFF.md  REDDIT_COMMENTS.md  REDDIT_POST.md
docs/wiki/: amdgpu-npu-architecture.md  building-and-testing.md  shared-gtt-dmabuf.md  smu-init-order.md
npu-gpu-cpu/docs/: HANDOFF-NPU-OPTIMIZATION.md
openspec/changes/unified-amdgpu-driver/: proposal.md  tasks.md
patches/: 0001-amdxdna-fix-smu-init-order-strix-halo.patch  0002-add-npu-ip-block.patch  amdgpu_npu.c  amdgpu_npu.h  amdgpu_npu_mgr.c  amdgpu_npu_sched.c  build.sh
rocm-npu/: CMakeLists.txt  hip_npu.cpp  hip_npu_memory.cpp  npu_aql.h
tests/: bench_gtt_dmabuf  bench_gtt_dmabuf.cpp  bench_unified.py  hip_list_devices  hip_list_devices.cpp  stress_npu.py  test_direct_npu_gemm  test_direct_npu_gemm.cpp  test_gtt_dmabuf  test_gtt_dmabuf.cpp  test_npu_dev  test_npu_dev.cpp  test_npu_gemm  test_npu_gemm.cpp  test_prepacked_gemm  test_prepacked_gemm.cpp  test_reddit_scraper.py  test_xrt_npu  test_xrt_npu.cpp
tools/: reddit_scraper.py
